%% MySQL Clean-Store Tabellen
erDiagram
    COMPANIES {
        string company_key PK
        string current_symbol
        string company_name
        string profile_status
        string sector
        bigint market_cap
        datetime updated_at
    }

    INSIDER_TRADES {
        bigint id PK
        string company_key FK
        string symbol_at_trade
        string reporting_name
        date transaction_date
        decimal trade_value
        string validation_status
        string gate_status
        decimal score
        string score_class
        string dedupe_key
    }

    COMPANY_TRADE_STATS {
        string company_key PK
        bigint trade_count
        bigint buy_count
        bigint sell_count
        date last_trade_date
    }

    MARKET_SIGNAL_CACHE {
        string symbol PK
        date lookback_from
        date lookback_to
        decimal avg_20d_volume
        decimal sma_50
        decimal sma_200
        decimal momentum_3m
        decimal momentum_6m
        string technical_state
        string liquidity_state
    }

%% MongoDB Collections (kein relationales Schema, logische Beziehungen)
    INSIDER_TRADES_RAW["INSIDER_TRADES_RAW (MongoDB)"] {
        string dedupe_key
        string symbol
        string reporting_name
        date transaction_date
        decimal trade_value_estimated
        string gate_status
        string profile_status
        json raw_payload
    }

    MONGO_COMPANIES["MONGO_COMPANIES (MongoDB)"] {
        string company_key
        string current_symbol
        string profile_status
        datetime profile_updated_at
    }

    COMPANIES ||--o{ INSIDER_TRADES : company_key_fk
    COMPANIES ||--|| COMPANY_TRADE_STATS : company_key_fk

    INSIDER_TRADES }o--|| MARKET_SIGNAL_CACHE : "logische Beziehung (symbol)"
    INSIDER_TRADES_RAW }o--o{ INSIDER_TRADES : "logische Beziehung (dedupe_key)"
    MONGO_COMPANIES }o--|| COMPANIES : "logische Beziehung (company_key)"
